--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@rumblefishdev/hardhat-kms-signer",
-  "version": "0.1.3",
+  "name": "@white-matrix/hardhat-kms-signer",
+  "version": "0.1.1",
   "description": "Sign Hardhat deployment transactions using KMS key",
-  "repository": "github:rumblefishdev/hardhat-kms-signer",
-  "author": "Rumblefish Software Development",
+  "repository": "github:WhiteMatrixTech/hardhat-kms-signer",
+  "author": "Alvin(Xinyao) Sun <lucklyric@gmail.com>",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
